[package]
name = "mps"
version = "0.1.0"
edition = "2021"
description = "A fast MPS parser"
authors = ["David Cox <david@integrated-reasoning.com>"]
include = ["src/**/*", "test/**/*", "Cargo.*", "LICENSE", "README.md"]
homepage = "https://integrated-reasoning.com/"
repository = "https://github.com/integrated-reasoning/mps/"
documentation = "https://docs.rs/mps"
readme = "README.md"
license = "MIT"
keywords = ["optimization", "linear-programming", "parser", "nom", "math"]
categories = ["parser-implementations", "mathematics", "encoding", "science",  "development-tools"]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.11", features = ["derive"], optional = true }
color-eyre = "0.6.2"
fast-float = "0.2.0"
hashbrown = "0.14.3"
nom = "7.1.3"
nom-tracable = "0.9.0"
nom_locate = "4.2.0"
serde = { version = "1.0.195", features = ["serde_derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.34.0", features = ["yaml"] }
proptest = { version = "1.4.0", features = ["timeout", "std"] }
serde = { version = "1.0.195", features = ["serde_derive"] }

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[features]
default = ["clap", "serde"]
clap = ["dep:clap"]
insta = ["serde"]
serde = ["serde/serde_derive"]
trace = ["nom-tracable/trace"]

[package.metadata.cargo-all-features]
always_include_features = ["clap", "insta"]
max_combination_size = 4

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
