[package]
name = "mps"
version = "0.1.1"
edition = "2021"
description = "A fast MPS parser"
authors = ["David Cox <david@integrated-reasoning.com>"]
include = ["src/**/*", "test/**/*", "Cargo.*", "LICENSE", "README.md"]
homepage = "https://integrated-reasoning.com/"
repository = "https://github.com/integrated-reasoning/mps/"
documentation = "https://docs.rs/mps"
readme = "README.md"
license = "MIT"
keywords = ["optimization", "linear-programming", "parser", "nom", "math"]
categories = ["parser-implementations", "mathematics", "encoding", "science",  "development-tools"]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5", features = ["derive"], optional = true }
color-eyre = "0.6"
fast-float = "0.2"
hashbrown = { version = "0.15", features = ["serde"] }
nom = "7.1"
nom-tracable = "0.9"
nom_locate = "4.2"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.41", features = ["yaml"] }
proptest = { version = "1.6", features = ["timeout", "std"] }

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[[bin]]
name = "mps"
required-features = ["cli"]

[features]
default = ["insta"]
cli = ["dep:clap"]
insta = ["serde"]
serde = ["serde/serde_derive"]
trace = ["nom-tracable/trace"]

[package.metadata.cargo-all-features]
denylist = ["trace"]
always_include_features = ["cli", "insta"]
max_combination_size = 4

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
